# django-crud

./: .gitignore  README2.md  pyproject.toml
snacks_crud_project/snacks/: models.py  urls.py  views.py
snacks_crud_project/snacks/migrations/: 0001_initial.py
snacks_crud_project/snacks_crud_project/: settings.py
snacks_crud_project/templates/: base.html  snack_create.html  snack_delete.html  snack_detail.html  snack_list.html  snack_update.html
